--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -12,5 +12,7 @@
     <div id="main" class="container">
       {{{body}}}
     </div>
+    <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCsYKGxW1tT39r89OGt_FGND4J07eHLGOw&callback=init"></script>
   </body>
 </html>
