--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,9 +1,6 @@
-<div>
-  <h2>Please upload an image.</h2>
-  <p><em>Note: please ensure it's at least 960 x 300 pixels in size.</em></p>
-</div>
-
-<form method="post" action="/upload" enctype="multipart/form-data">
+<div id="intro">
+  <p>The Nevada National Security Site[1] (NNSS), previously the Nevada Test Site (NTS), is a United States Department of Energy reservation located in southeastern Nye County, Nevada, about 65 miles (105 km) northwest of the city of Las Vegas. Formerly known as the Nevada Proving Grounds,[2] the site was established on 11 January 1951 for the testing of nuclear devices, covering approximately 1,360 square miles (3,500 km2) of desert and mountainous terrain.</p>
+  <form method="post" action="/upload" enctype="multipart/form-data">
   <div class="form-group">
     <input type="file" name="file">
   </div>
@@ -11,3 +8,75 @@
     <input type="submit" value="Submit" class="btn btn-primary">
   </div>
 </form>
+</div>
+<div id="map"></div>
+<script>
+  var map;
+  var s = true
+  var to;
+  var idleTime;
+  var idle = true;
+  setInterval(function(){
+     checkIdle();
+  }, 1000)
+
+  function checkIdle(){
+    console.log('checking idle')
+    idleTime = idleTime + 1;
+    
+    if (!idle && idleTime >= 10){
+      console.log('restarting recenter')
+      to = setInterval(function(){recenter(bounds)}, 2000)
+      idle = true;
+    }
+  }
+
+  function init() {
+    map = new google.maps.Map(document.getElementById('map'), {
+      zoom: 13,
+      center: {lat: 37.1101529, lng: -116.0593457},
+      mapTypeId: google.maps.MapTypeId.SATELLITE
+    });
+
+
+    google.maps.event.addListenerOnce(map, 'idle', function(){
+        bounds = getBounds();
+        to = setInterval(function(){recenter(bounds)}, 2000)
+    });
+    map.addListener('click', function() {
+         
+           clearInterval(to)
+           idleTime = 0;
+           idle = false;
+           
+    });
+  }
+  function getBounds(){
+    return {
+      "lat_min": map.getBounds().getSouthWest().lat(),
+      "lat_range": map.getBounds().getNorthEast().lat() - map.getBounds().getSouthWest().lat(),
+      "lng_min": map.getBounds().getSouthWest().lng(),
+      "lng_range": map.getBounds().getNorthEast().lng() - map.getBounds().getSouthWest().lng()
+    }
+  }
+  function recenter(m) {
+    idle = true;
+    s = !s;
+    if (s){
+    
+      map.setCenter( new google.maps.LatLng(m.lat_min + (Math.random() * m.lat_range), 
+                              m.lng_min + (Math.random() * m.lng_range)))
+      map.setZoom(15);
+    }else{
+      map.setCenter(new google.maps.LatLng(m.lat_min + (Math.random() * m.lat_range), 
+                          m.lng_min + (Math.random() * m.lng_range)))
+      map.setZoom(13);
+    }
+
+  }
+
+
+</script>
+  
+
+ 
