--- a/front-end/css/styles.css
+++ b/front-end/css/styles.css
@@ -17,8 +17,8 @@ html, body, #main{padding:0px;margin:0px; height:100%; width:100%;}
 
 #map {
 height: 100%;
-width:50%;
-float:right;
+width:100%;
+
 }
 #left{
 	box-sizing:border-box;
@@ -26,6 +26,13 @@ float:right;
 	width:50%;
 	float:left;
 	padding:25px;
+}
+#right{
+  box-sizing:border-box;
+  height: 100%;
+  width:50%;
+  float:right;
+  padding:25px;
 }
 #faces{
   box-sizing:border-box;
