--- a/front-end/css/styles.css
+++ b/front-end/css/styles.css
@@ -30,6 +30,7 @@ width:100%;
 }
 .fc{
   margin-top:15px;
+  position:relative;
 }
 #right{
   box-sizing:border-box;
@@ -59,4 +60,14 @@ width:100%;
   left: -1000px;
   position: absolute;
   top: -1000px;
+}
+canvas{
+  width:100%;
+  height:100%;
+}
+#overlay{
+    position: absolute;
+  top:0px;
+  left:0px;
+  
 }
