--- a/front-end/css/styles.css
+++ b/front-end/css/styles.css
@@ -1,4 +1,4 @@
-html, body, #main{padding:0px;margin:0px; height:100%; width:100%;}
+html, body, #main{padding:0px;margin:0px; height:100%; width:100%; font-family: 'Roboto', sans-serif;}
 
 .frame {
   position: relative;  
@@ -38,6 +38,23 @@ width:100%;
   width:50%;
   float:right;
   padding:10px;
+  position:relative;
+}
+.info-box{
+  position:absolute;
+  top:0px;
+  left:0px;
+  text-align:center;
+  background:black;
+  color:white;
+  opacity:1;
+  width:100%;
+  padding:15px;
+  z-index:1000;
+  box-sizing:border-box;
+}
+.info-box p{
+  color:white;
 }
 #map-moveable{
   width:100%;
@@ -50,6 +67,7 @@ width:100%;
   padding:25px;
   top:20px;
   opacity:.6;
+  overflow:scroll;
 }
 #faces{
   box-sizing:border-box;
@@ -63,7 +81,7 @@ width:100%;
 }
 canvas{
   width:100%;
-  height:100%;
+
 }
 #overlay{
     position: absolute;
@@ -71,3 +89,15 @@ canvas{
   left:0px;
   
 }
+.lil{
+  font-size:12px;
+}
+
+
+
+
+
+
+
+
+
